--- a/src/templates/homepage.html
+++ b/src/templates/homepage.html
@@ -48,84 +48,115 @@
     {% end_dnd_section %}
 
     {# Three Column Feature Section #}
-      {% dnd_section %}
-        {% dnd_column %}
-          {% dnd_row
-            padding={
-              "top": 0,
-              "bottom": 40,
-              "left": 0,
-              "right": 0
-            }
+    {% dnd_section %}
+      {% dnd_column %}
+        {% dnd_row
+          padding={
+            "top": 0,
+            "bottom": 40,
+            "left": 0,
+            "right": 0
+          }
+        %}
+          {% dnd_module path="@hubspot/header",
+            flexbox_positioning="MIDDLE_CENTER",
+            header_tag="h2",
+            value="Headlines and Mission Statements for Days"
           %}
-            {% dnd_module path="@hubspot/header",
-              flexbox_positioning="MIDDLE_CENTER",
-              header_tag="h2",
-              value="Headlines and Mission Statements for Days"
-            %}
-            {% end_dnd_module %}
-          {% end_dnd_row %}
-          {% dnd_row
-            padding={
-              "top": 0,
-              "bottom": 40,
-              "left": 0,
-              "right": 0
-            }
+          {% end_dnd_module %}
+        {% end_dnd_row %}
+        {% dnd_row
+          padding={
+            "top": 0,
+            "bottom": 40,
+            "left": 0,
+            "right": 0
+          }
+        %}
+          {% dnd_column
+            offset=0,
+            width=4
           %}
-            {% dnd_module
-              path="../modules/Feature",
-              offset=0,
-              width=4,
-              flexbox_positioning="MIDDLE_CENTER",
-              feature_icon={
-                  "name": "clock",
-                  "type": "REGULAR",
-                  "unicode": "f017"
-              },
-              feature_title="Quick and Simple",
-              feature_description="Leverage the intuitive super awesome software that saves you time and will rescue your business. Promise."
-            %}
-            {% end_dnd_module %}
-            {% dnd_module
-              path="../modules/Feature",
-              offset=4,
-              width=4,
-              flexbox_positioning="MIDDLE_CENTER",
-              feature_icon={
-                  "name": "cloud",
-                  "type": "SOLID",
-                  "unicode": "foc2"
-              },
-              feature_title="Library of Assets",
-              feature_description="Leverage the intuitive super awesome software that saves you time and will rescue your business. Promise."
-            %}
-            {% end_dnd_module %}
-            {% dnd_module
-              path='../modules/Feature',
-              offset=8,
-              width=4,
-              flexbox_positioning="MIDDLE_CENTER",
-              feature_icon={
-                  "name": "mobile-alt",
-                  "type": "SOLID",
-                  "unicode": "f3cd"
-              },
-              feature_title="Responsive Design",
-              feature_description="Leverage the intuitive super awesome software that saves you time and will rescue your business. Promise."
-            %}
-            {% end_dnd_module %}
-          {% end_dnd_row %}
-          {% dnd_row %}
-            {% dnd_module path="../modules/Customizable Button",
-              flexbox_positioning="MIDDLE_CENTER",
-              link="#",
-              button_text="View Features"
-            %}
-            {% end_dnd_module %}
-          {% end_dnd_row %}
-        {% end_dnd_column %}
-      {% end_dnd_section %}
+            {% dnd_row %}
+              {% dnd_module
+                path="../modules/Icon",
+                flexbox_positioning="MIDDLE_CENTER",
+                feature_icon={
+                    "name": "clock",
+                    "type": "REGULAR",
+                    "unicode": "f017"
+                }
+              %}
+              {% end_dnd_module %}
+            {% end_dnd_row %}
+            {% dnd_row %}
+              {% dnd_module path="@hubspot/rich_text" %}
+                  {% module_attribute "html" %}
+                  <div style="text-align: center;">
+                      <h3>Quick and Simple</h3>
+                      <p>Leverage the intuitive super awesome software that saves you time and will rescue your business. Promise.</p>
+                  </div>
+                  {% end_module_attribute %}
+              {% end_dnd_module %}
+            {% end_dnd_row %}
+          {% end_dnd_column %}
+          {% dnd_column
+            offset=4,
+            width=4
+          %}
+            {% dnd_row %}
+              {% dnd_module
+                path="../modules/Icon",
+                flexbox_positioning="MIDDLE_CENTER",
+                feature_icon={
+                    "name": "cloud",
+                    "type": "SOLID",
+                    "unicode": "foc2"
+                }
+              %}
+              {% end_dnd_module %}
+            {% end_dnd_row %}
+            {% dnd_row %}
+              {% dnd_module path="@hubspot/rich_text" %}
+                  {% module_attribute "html" %}
+                  <div style="text-align: center;">
+                      <h3>Library of Assets</h3>
+                      <p>Leverage the intuitive super awesome software that saves you time and will rescue your business. Promise.</p>
+                  </div>
+                  {% end_module_attribute %}
+              {% end_dnd_module %}
+            {% end_dnd_row %}
+          {% end_dnd_column %}
+          {% dnd_column
+            offset=8,
+            width=4
+          %}
+            {% dnd_row %}
+              {% dnd_module
+                path='../modules/Icon',
+                flexbox_positioning="MIDDLE_CENTER",
+                feature_icon={
+                    "name": "mobile-alt",
+                    "type": "SOLID",
+                    "unicode": "f3cd"
+                }
+              %}
+              {% end_dnd_module %}
+              {% end_dnd_row %}
+              {% dnd_row %}
+              {% dnd_module path="@hubspot/rich_text" %}
+                  {% module_attribute "html" %}
+                  <div style="text-align: center;">
+                      <h3>Responsive Design</h3>
+                      <p>Leverage the intuitive super awesome software that saves you time and will rescue your business. Promise.</p>
+                  </div>
+                  {% end_module_attribute %}
+              {% end_dnd_module %}
+            {% end_dnd_row %}
+          {% end_dnd_column %}
+        {% end_dnd_row %}
+      {% end_dnd_column %}
+    {% end_dnd_section %}
 
     {# Two Column With Image Left Section #}
       {% dnd_section
