Updating button name

--- a/src/templates/homepage.html
+++ b/src/templates/homepage.html
@@ -37,7 +37,7 @@
           {% end_dnd_module %}
         {% end_dnd_row %}
         {% dnd_row %}
-          {% dnd_module path="../modules/Customizable Button",
+          {% dnd_module path="../modules/Button",
             flexbox_positioning="MIDDLE_CENTER",
             link="#",
             button_text="Free Trial"
@@ -203,7 +203,7 @@
           {% end_dnd_row %}
           {% dnd_row %}
             {% dnd_module
-              path="../modules/Customizable Button",
+              path="../modules/Button",
               flexbox_positioning='MIDDLE_LEFT',
               link="#",
               button_text="Free Trial"
@@ -454,7 +454,7 @@
           {% end_dnd_module %}
         {% end_dnd_row %}
         {% dnd_row %}
-          {% dnd_module path="../modules/Customizable Button",
+          {% dnd_module path="../modules/Button",
             flexbox_positioning="MIDDLE_CENTER",
             link="#",
             button_text="Free Trial"
