--- a/src/templates/pricing.html
+++ b/src/templates/pricing.html
@@ -96,7 +96,7 @@
           {% end_dnd_row %}
           {% dnd_row %}
             {% dnd_module
-              path="../modules/Customizable Button",
+              path="../modules/Button",
               flexbox_positioning="MIDDLE_LEFT",
               link="#",
               button_text="Free Trial"
