Updating blog listing banner image

--- a/src/templates/blog-index.html
+++ b/src/templates/blog-index.html
@@ -10,7 +10,7 @@
 
     {% module "blog_listing_banner"
       path="../modules/Blog Listing Banner",
-      background_image={
+      blog_listing_banner_image={
         "src": get_asset_url("../images/blog-banner.png")
       }
     %}
