Cleaning up minor mistakes in a few modules

--- a/src/templates/blog-post.html
+++ b/src/templates/blog-post.html
@@ -10,7 +10,7 @@
 
     {% module "blog_post_banner"
       path="../modules/Blog Post Banner",
-      background_image={
+      custom_bg_image={
         "src": get_asset_url("../images/blog-post-banner.png")
       }
     %}
