Updating icon module

--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -112,7 +112,7 @@
               {% dnd_module
                 path="../modules/Icon",
                 flexbox_positioning="MIDDLE_CENTER",
-                feature_icon={
+                icon={
                     "name": "map-marker",
                     "type": "REGULAR",
                     "unicode": "f041"
@@ -140,7 +140,7 @@
               {% dnd_module
                 path="../modules/Icon",
                 flexbox_positioning="MIDDLE_CENTER",
-                feature_icon={
+                icon={
                     "name": "phone",
                     "type": "SOLID",
                     "unicode": "f095"
@@ -168,7 +168,7 @@
               {% dnd_module
                 path='../modules/Icon',
                 flexbox_positioning="MIDDLE_CENTER",
-                feature_icon={
+                icon={
                     "name": "envelope",
                     "type": "SOLID",
                     "unicode": "f0e0"
