--- a/src/templates/homepage.html
+++ b/src/templates/homepage.html
@@ -81,7 +81,7 @@
               {% dnd_module
                 path="../modules/Icon",
                 flexbox_positioning="MIDDLE_CENTER",
-                feature_icon={
+                icon={
                     "name": "clock",
                     "type": "REGULAR",
                     "unicode": "f017"
@@ -108,7 +108,7 @@
               {% dnd_module
                 path="../modules/Icon",
                 flexbox_positioning="MIDDLE_CENTER",
-                feature_icon={
+                icon={
                     "name": "cloud",
                     "type": "SOLID",
                     "unicode": "foc2"
@@ -135,7 +135,7 @@
               {% dnd_module
                 path='../modules/Icon',
                 flexbox_positioning="MIDDLE_CENTER",
-                feature_icon={
+                icon={
                     "name": "mobile-alt",
                     "type": "SOLID",
                     "unicode": "f3cd"
