Updating statistic module

--- a/src/css/_modules.css
+++ b/src/css/_modules.css
@@ -42,3 +42,8 @@ img {
 .social-links__icon:hover svg {
     fill: #fff;
 }
+
+/* Statististic */
+.statistic__info {
+    color: {{ get_theme_style_setting('typography_group.typography.body_font.color') }};
+}
