--- a/src/modules/Pricing Table.module/module.css
+++ b/src/modules/Pricing Table.module/module.css
@@ -1,22 +1,22 @@
 .pricing-block-section {
-    display: flex; 
-    flex-wrap: wrap; 
-    justify-content: space-between; 
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 .price-block {
-    margin-bottom: 30px; 
+    margin-bottom: 30px;
 }
 .price-block--1 {
-    width: 100%; 
+    width: 100%;
 }
 .price-block--2 {
-    width: 47%; 
+    width: 47%;
 }
 .price-block--3 {
     width: 30%;
 }
 .price-block--4 {
-    width: 23%; 
+    width: 23%;
 }
 .price-block--monthly {
     display: block;
@@ -37,18 +37,15 @@
     min-width: 200px;
     text-align: center;
 }
-
 .billing-selectors__pricing-option--left {
     border-top-left-radius: 25px;
     border-bottom-left-radius: 25px;
 }
-
 .billing-selectors__pricing-option--right {
     border-top-right-radius: 25px;
     border-bottom-right-radius: 25px;
     border-left: 0;
 }
-
 .billing-selectors__pricing-option input[type="radio"] {
     visibility: hidden;
     position: absolute;
@@ -64,9 +61,12 @@
     vertical-align: sub;
 }
 .billing-selectors__pricing-option input[type="radio"]:checked + label:before {
-    background-color: #fff;
+    background-color: #FFFFFF;
+    border: 6px solid #34B5E5
 }
 .price-block__header {
+    background-color: #34B5E5;
+    color: #FFFFFF;
     padding: 40px 10px;
     text-align: center;
 }
@@ -77,36 +77,36 @@
     letter-spacing: 0.2em;
 }
 .price-block__price {
-    position: relative; 
+    position: relative;
 }
 .price-block__currency,
 .price-block__number {
-    display: inline-block; 
+    display: inline-block;
 }
 .price-block__currency {
     font-size: 1.4rem;
-    line-height: 3rem; 
-    vertical-align: top; 
+    line-height: 3rem;
+    vertical-align: top;
 }
 .price-block__number {
     font-size: 4rem;
-    font-weight: bold;  
-    line-height: 4rem; 
+    font-weight: bold;
+    line-height: 4rem;
     vertical-align: top;
 }
 .price-block__description-block {
-    background-color: #fff;
+    background-color: #FFFFFF;
     padding: 20px 40px;
-    border: 1px solid #d0d0d0;
+    border: 1px solid #D0D0D0;
 }
 .price-block__cta {
-    text-align: center; 
+    text-align: center;
 }
 
 @media (max-width: 1000px) {
     .price-block--3,
     .price-block--4 {
-        width: 45%; 
+        width: 45%;
     }
 }
 
@@ -114,6 +114,6 @@
     .price-block--2,
     .price-block--3,
     .price-block--4 {
-        width: 100%; 
+        width: 100%;
     }
 }
