Module cleanup after some testing

--- a/src/templates/homepage.html
+++ b/src/templates/homepage.html
@@ -317,7 +317,7 @@
             offset=0,
             width=4,
             flexbox_positioning="MIDDLE_CENTER",
-            testimonial_headshot={
+            testimonial_image={
                 "src": get_asset_url("../images/alan.png"),
                 "alt": "Alan Dixon"
             }
@@ -328,7 +328,7 @@
             offset=4,
             width=4,
             flexbox_positioning="MIDDLE_CENTER",
-            testimonial_headshot={
+            testimonial_image={
                 "src": get_asset_url("../images/alan.png"),
                 "alt": "Alan Dixon"
             }
@@ -339,7 +339,7 @@
             offset=8,
             width=4,
             flexbox_positioning="MIDDLE_CENTER",
-            testimonial_headshot={
+            testimonial_image={
                 "src": get_asset_url("../images/alan.png"),
                 "alt": "Alan Dixon"
             }
