--- a/src/modules/Testimonial.module/module.css
+++ b/src/modules/Testimonial.module/module.css
@@ -1,12 +1,12 @@
 .testimonial {
     background-color: rgba(255, 255, 255, 0.9);
+    border-bottom: 15px solid transparent;
+    margin-top: 20px;
     padding: 45px 40px 30px;
     text-align: center;
-    margin-top: 20px;
-    border-bottom: 15px solid transparent;
-    -webkit-transition: all .15s linear;
-    -o-transition: all .15s linear;
-    transition: all .15s linear;
+    -webkit-transition: all 0.15s linear;
+    -o-transition: all 0.15s linear;
+    transition: all 0.15s linear;
 }
 
 .testimonial:hover {
@@ -17,13 +17,13 @@
 .testimonial__avatar,
 .testimonial__name {
     display: inline-block;
-    vertical-align: middle;
     margin: 20px 0 0;
+    vertical-align: middle;
 }
 
 .testimonial__avatar {
-    height: 45px;
-    width: 45px;
     background-size: cover;
     border-radius: 50%;
+    height: 45px;
+    width: 45px;
 }
