--- a/src/modules/Pillar Menu.module/module.css
+++ b/src/modules/Pillar Menu.module/module.css
@@ -1,5 +1,5 @@
 .pillar-navigation__menu {
-    border: 1px solid #d0d0d0;
+    border: 1px solid #D0D0D0;
     border-radius: 4px;
     padding: 10px;
 }
@@ -10,7 +10,7 @@
 }
 
 .pillar-navigation__menu-item {
-    border-bottom: 1px solid #d0d0d0;
+    border-bottom: 1px solid #D0D0D0;
     padding: 10px;
 }
 
