--- a/src/templates/blog-post.html
+++ b/src/templates/blog-post.html
@@ -72,12 +72,12 @@
 
     {% module "blog_cta"
       path="../modules/Call to Action Banner",
-      cta_image={
+      cta_banner_image={
         "src": get_asset_url("../images/phone.png"),
         "alt": "Mobile phone"
       },
-      cta_content="<h2>Download Perfect Today!</h2><p>Leverage the intuitive super awesome software that saves you time and will rescue your business. Promise.</p>",
-      cta="782d9df3-4dc5-44dc-81ad-a0efffcf0cb2"
+      cta_banner_content="<h2>Download Perfect Today!</h2><p>Leverage the intuitive super awesome software that saves you time and will rescue your business. Promise.</p>",
+      cta_button="782d9df3-4dc5-44dc-81ad-a0efffcf0cb2"
     %}
 
     {% module "blog_related_posts" path="../modules/Blog Related Posts" %}
