--- a/src/modules/Statistic.module/module.css
+++ b/src/modules/Statistic.module/module.css
@@ -1,13 +1,13 @@
 .statistic {
   text-align: center;
 }
+
 .statistic__circle *,
 .statistic__circle *:before,
 .statistic__circle *:after {
-  -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
   box-sizing: content-box;
 }
+
 .statistic__circle {
   background-color: #D0D0D0;
   border-radius: 50%;
@@ -18,11 +18,13 @@
   position: relative;
   width: 1em;
 }
+
 .statistic__bar,
 .statistic__fill,
 .statistic__fill {
   border-color: #34B5E5;
 }
+
 .statistic__info {
   display: block;
   font-size: 0.3em;
@@ -36,36 +38,40 @@
   width: 100%;
   z-index: 1;
 }
+
 .statistic__unit {
   font-size: 0.6em;
 }
+
 .statistic__slice {
-  clip: rect(0em, 1em, 1em, 0.5em);
+  clip: rect(0, 1em, 1em, 0.5em);
   height: 1em;
   position: absolute;
   width: 1em;
 }
+
 .statistic__circle .statistic__slice--large {
   clip: rect(auto, auto, auto, auto);
 }
+
 .statistic__bar,
 .statistic__fill--large {
   border-radius: 50%;
   border-width: 0.08em;
   border-style: solid;
   border-radius: 50%;
-  clip: rect(0em, 0.5em, 1em, 0em);
+  clip: rect(0, 0.5em, 1em, 0em);
   height: 0.84em;
   position: absolute;
   width: 0.84em;
 }
+
 .statistic__fill {
   -webkit-transform: rotate(180deg);
-  -moz-transform: rotate(180deg);
-  -ms-transform: rotate(180deg);
-  -o-transform: rotate(180deg);
-  transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+      transform: rotate(180deg);
 }
+
 .statistic__circle::after {
   background-color: #FFFFFF;
   border-radius: 50%;
