--- a/src/modules/Social follow.module/module.css
+++ b/src/modules/Social follow.module/module.css
@@ -1,12 +1,12 @@
 .social-links {
-    border: 2px solid #000;
+    border: 2px solid #000000;
     border-radius: 4px;
     display: inline-block;
 }
 
 .social-links__icon {
     background-color: transparent;
-    border-right: 2px solid #000;
+    border-right: 2px solid #000000;
     box-sizing: border-box;
     float: left;
     height: 40px;
@@ -21,15 +21,15 @@
 }
 
 .social-links__icon svg {
-    fill: #000;
+    fill: #000000;
     height: 15px;
     width: auto;
 }
 
 .social-links__icon:hover {
-    background-color: #000;
+    background-color: #000000;
 }
 
 .social-links__icon:hover svg {
-    fill: #fff;
+    fill: #FFFFFF;
 }
